--- a/interfaces/_state_react_injecttoggle_.iprops.html
+++ b/interfaces/_state_react_injecttoggle_.iprops.html
@@ -99,7 +99,7 @@
 					<div class="tsd-signature tsd-kind-icon">children<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">function</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/9206a6f/src/state-react/InjectToggle.tsx#L6">state-react/InjectToggle.tsx:6</a></li>
+							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/a003451/src/state-react/InjectToggle.tsx#L6">state-react/InjectToggle.tsx:6</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -152,6 +152,21 @@
 															</li>
 														</ul>
 													</li>
+													<li class="tsd-parameter">
+														<h5>toggle<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">function</span></h5>
+														<ul class="tsd-parameters">
+															<li class="tsd-parameter-siganture">
+																<ul class="tsd-signatures tsd-kind-type-literal tsd-parent-kind-variable tsd-is-not-exported">
+																	<li class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
+																</ul>
+																<ul class="tsd-descriptions">
+																	<li class="tsd-description">
+																		<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
+																	</li>
+																</ul>
+															</li>
+														</ul>
+													</li>
 												</ul>
 											</li>
 										</ul>
@@ -168,7 +183,7 @@
 					<div class="tsd-signature tsd-kind-icon">initial<wbr>Value<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/9206a6f/src/state-react/InjectToggle.tsx#L7">state-react/InjectToggle.tsx:7</a></li>
+							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/a003451/src/state-react/InjectToggle.tsx#L13">state-react/InjectToggle.tsx:13</a></li>
 						</ul>
 					</aside>
 				</section>
